--- a/RideConnect.API/.gitignore
+++ b/RideConnect.API/.gitignore
@@ -364,5 +364,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-.idea/.idea.ResourceEdge/.idea/.name
+.idea/.idea.RideConnect/.idea/.name
 /.idea
+
+*obj*
+*bin*
