--- a/RideConnect.API/appsettings.json
+++ b/RideConnect.API/appsettings.json
@@ -1,6 +1,12 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true",
+    },
+    "JwtConfig": {
+        "Secret": "xgrrdupqizxpwvkitiihqvbgrpzjeoel",
+        "Issuer": "RideConnect",
+        "Audience": "RideConnectUsers",
+        "Expires": 60
     },
     "Logging": {
         "LogLevel": {
