--- a/RideConnect.Infrastructure/RideConnect.Infrastructure.csproj
+++ b/RideConnect.Infrastructure/RideConnect.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RideConnect.Data\RideConnect.Data.csproj" />
     <ProjectReference Include="..\RideConnect.Models\RideConnect.Models.csproj" />
   </ItemGroup>
