--- a/RideConnect.API/appsettings.json
+++ b/RideConnect.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Server=tcp:rideconnect.database.windows.net,1433;Initial Catalog=rideconnect_dev;Persist Security Info=False;User ID=RideConnect;Password=dhweu2323-@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False"
     },
     "JwtConfig": {
         "Secret": "xgrrdupqizxpwvkitiihqvbgrpzjeoel",
@@ -15,4 +15,5 @@
         }
     },
     "AllowedHosts": "*"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true",
 }
