--- a/RideConnect.API/appsettings.json
+++ b/RideConnect.API/appsettings.json
@@ -15,5 +15,5 @@
         }
     },
     "AllowedHosts": "*"
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RideConnect__Dev;Trusted_Connection=True;MultipleActiveResultSets=true",s
 }
